feat: add toyAPI toy form
