# backend/openapi.yaml
@@ -154,6 +154,80 @@ paths:
           description: Toy not found
         '500':
           description: Internal server error
+  /api/v1/toys/me:
+        post:
+          summary: Add a new toy for the current user
+          tags:
+           - Toys
+          requestBody:
+            required: true
+            content:
+              multipart/form-data:
+                schema:
+                  type: object
+                  properties:
+                    name:
+                      type: string
+                    brand:
+                      type: string
+                    description:
+                      type: string
+                    # fullDescription:
+                    #   type: string
+                    status:
+                      type: string
+                      enum: [available, exchanged, 'hold']
+                    condition:
+                      type: string
+                    origin:
+                      type: string
+                    price:
+                      type: string
+                     
+                    quantity:
+                      type: string
+                     
+                    tokenValue:
+                      type: string
+                    ageCategory:
+                      type: array
+                      items:
+                        type: string
+                    category:
+                      type: array
+                      items:
+                        type: string
+                    images:
+                      # type: array
+                      # items:
+                        type: string
+                        # format: binary
+                  required:
+                    - name
+                    - brand
+                    - description
+                    - status
+                    - condition
+                    - origin
+                    - price
+                    - quantity
+                    - tokenValue
+                    - ageCategory
+                    - category
+          responses:
+            '201':
+              description: Toy created
+              content:
+                application/json:
+                  schema:
+                    type: object
+                    properties:
+                      data:
+                        type: object
+                        items:
+                          $ref: '#/components/schemas/Toy'
+                      status:
+                        type: string
   /api/v1/users:
       get:
         summary: Get list of users
@@ -451,8 +525,6 @@ components:
         - description
         - tokenValue
       properties:
-        id:
-          type: string
         name:
           type: string
         description:
@@ -463,13 +535,27 @@ components:
             type: string
         status:
           type: string
-          enum: [available, exchanged]
+          enum: [available, exchanged, 'hold']
         images:
+          # type: array
+          # items:
+            type: string
+        tokenValue:
+          type: string
+        price:
+          type: string
+        # fullDescription: 
+        #   type: string
+        brand:
+          type: string
+        condition:
+          type: string
+        origin:
+          type: string
+        ageCategory:
           type: array
           items:
             type: string
-        tokenValue:
-          type: integer
     PartialToy:
       type: object
       properties:
@@ -477,16 +563,18 @@ components:
           type: string
         description:
           type: string
+        # fullDescription: 
+        #   type: string
         category:
           type: array
           items:
             type: string
         status:
           type: string
-          enum: [available, exchanged]
+          enum: [available, exchanged, hold]
         images:
-          type: array
-          items:
+          # type: array
+          # items:
             type: string
         tokenValue:
           type: integer
